dada_tests/format-strings/escape-unrecognized/compiler-output.ref
Error: unrecognized escape `\a`
   ╭─[dada_tests/format-strings/escape-unrecognized.dada:1:5]
   │
 1 │ x = "\a" #! ERROR unrecognized escape `\\a`
   ·     ──┬─  
   ·       ╰─── here
───╯
